removed renderstop from the addhead method